<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:text="@string/date_event"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvDate"
        android:layout_below="@+id/tvDate"
        android:singleLine="true"
        android:text="@string/time"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvTime"
        android:layout_below="@+id/tvTime"
        android:singleLine="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/tvDate"
        android:text="@string/content"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />


</RelativeLayout>
