<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_edit_white_24px"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_settings_white_24px"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAbout"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>