<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuAddPhoto"
        android:icon="@drawable/ic_add_a_photo_white_24px"
        android:title="@string/add_photo"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAddAlarm"
        android:icon="@drawable/ic_add_alarm_white_24px"
        android:title="@string/add_remainder"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAddFile"
        android:icon="@drawable/ic_insert_drive_file_white_24px"
        android:title="@string/add_file"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAddLocation"
        android:icon="@drawable/ic_add_location_white_24px"
        android:title="@string/add_location"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAddTimeStamp"
        android:icon="@drawable/ic_access_time_white_24px"
        android:title="@string/add_timestamp"
        app:showAsAction="always" />
</menu>